exports[`SnippetPreviewSection RTL renders the snippet editor inside of it 1`] = `
<SnippetPreviewSection
  hasPaperStyle={true}
  icon="eye"
  theme={
    Object {
      "isRtl": true,
    }
  }
  title="Snippet editor">
  <SnippetPreviewSection__Section
    hasPaperStyle={true}
    headingIcon="eye"
    headingIconColor="#555"
    headingLevel={3}
    headingText="Snippet editor">
    <StyledSection
      className="SnippetPreviewSection__Section-kWfIbs LsuOf"
      hasPaperStyle={true}
      headingIcon="eye"
      headingIconColor="#555"
      headingLevel={3}
      headingText="Snippet editor">
      <span>
        yoast-components StyledSection
      </span>
    </StyledSection>
  </SnippetPreviewSection__Section>
</SnippetPreviewSection>
`;

exports[`SnippetPreviewSection renders the snippet editor inside of it 1`] = `
<SnippetPreviewSection
  hasPaperStyle={true}
  icon="eye"
  theme={
    Object {
      "isRtl": false,
    }
  }
  title="Snippet editor">
  <SnippetPreviewSection__Section
    hasPaperStyle={true}
    headingIcon="eye"
    headingIconColor="#555"
    headingLevel={3}
    headingText="Snippet editor">
    <StyledSection
      className="SnippetPreviewSection__Section-kWfIbs LsuOf"
      hasPaperStyle={true}
      headingIcon="eye"
      headingIconColor="#555"
      headingLevel={3}
      headingText="Snippet editor">
      <span>
        yoast-components StyledSection
      </span>
    </StyledSection>
  </SnippetPreviewSection__Section>
</SnippetPreviewSection>
`;
